--- a/.travis.yml
+++ b/.travis.yml
@@ -1,12 +1,10 @@
 # Install dependencies.
 install:
-  - sh <(curl -q https://platform.activestate.com/dl/cli/install.sh) -n
+  - python3 -m pip install -r requirements.txt
 
-before_script:
-  - state deploy shnewto/geta
 # Run linting and tests.
 script:
-  - pytest
+  - python3 -m pytest
 
 # Turn email notifications off.
 notifications:
