--- a/.travis.yml
+++ b/.travis.yml
@@ -1,14 +1,13 @@
-language: python
-python:
-  - "3.6"
-
 # Install dependencies.
 install:
-  - python3 -m pip install -r requirements.txt
+  - sh <(curl -q https://platform.activestate.com/dl/cli/install.sh) -n
 
+before_script:
+  state deploy shnewto/geta
+ 
 # Run linting and tests.
 script:
-  - python3 -m pytest
+  - pytest
 
 # Turn email notifications off.
 notifications:
